tests/ui/lang-items/duplicate.stderr
error[E0152]: found duplicate lang item `sized`
  --> $DIR/duplicate.rs:5:1
   |
LL | trait Sized {}
   | ^^^^^^^^^^^^^^
   |
   = note: the lang item is first defined in crate `core` (which `std` depends on)
   = note: first definition in `core` loaded from SYSROOT/libcore-*.rlib
   = note: second definition in the local crate (`duplicate`)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0152`.
